--- a/hotel-list.html
+++ b/hotel-list.html
@@ -51,7 +51,7 @@
                                                 <a href="/index.html">Home</a>
                                             </li>
                                             <li>
-                                                <a href="contact.html">Hotel</a>
+                                                <a href="/hotel-list.html">Hotel</a>
                                             </li>
                                             <li>
                                                 <a href="contact.html">Tours</a>
@@ -60,7 +60,7 @@
                                                 <a href="contact.html">Flight</a>
                                             </li>
                                             <li>
-                                                <a href="contact.html">Blogs</a>
+                                                <a href="/blog-list.html">Blogs</a>
                                             </li>
                                             <li>
                                                 <a href="contact.html">Plan</a>
@@ -1780,7 +1780,7 @@
 
                                             <div class="">
                                                 <div class="text-14 text-light-1 mt-50 md:mt-20">8 nights, 2 adult</div>
-                                                <div class="text-22 lh-12 fw-600 mt-5">US$72</div>
+                                                <div class="text-22 lh-12 fw-600 mt-5">3000₹ </div>
                                                 <div class="text-14 text-light-1 mt-5">+US$828 taxes and charges</div>
 
 
@@ -1925,7 +1925,7 @@
 
                                             <div class="">
                                                 <div class="text-14 text-light-1 mt-50 md:mt-20">8 nights, 2 adult</div>
-                                                <div class="text-22 lh-12 fw-600 mt-5">US$72</div>
+                                                <div class="text-22 lh-12 fw-600 mt-5">3000₹ </div>
                                                 <div class="text-14 text-light-1 mt-5">+US$828 taxes and charges</div>
 
 
@@ -2040,7 +2040,7 @@
 
                                             <div class="">
                                                 <div class="text-14 text-light-1 mt-50 md:mt-20">8 nights, 2 adult</div>
-                                                <div class="text-22 lh-12 fw-600 mt-5">US$72</div>
+                                                <div class="text-22 lh-12 fw-600 mt-5">3000₹ </div>
                                                 <div class="text-14 text-light-1 mt-5">+US$828 taxes and charges</div>
 
 
@@ -2155,7 +2155,7 @@
 
                                             <div class="">
                                                 <div class="text-14 text-light-1 mt-50 md:mt-20">8 nights, 2 adult</div>
-                                                <div class="text-22 lh-12 fw-600 mt-5">US$72</div>
+                                                <div class="text-22 lh-12 fw-600 mt-5">3000₹ </div>
                                                 <div class="text-14 text-light-1 mt-5">+US$828 taxes and charges</div>
 
 
@@ -2270,7 +2270,7 @@
 
                                             <div class="">
                                                 <div class="text-14 text-light-1 mt-50 md:mt-20">8 nights, 2 adult</div>
-                                                <div class="text-22 lh-12 fw-600 mt-5">US$72</div>
+                                                <div class="text-22 lh-12 fw-600 mt-5">3000₹ </div>
                                                 <div class="text-14 text-light-1 mt-5">+US$828 taxes and charges</div>
 
 
@@ -2385,7 +2385,7 @@
 
                                             <div class="">
                                                 <div class="text-14 text-light-1 mt-50 md:mt-20">8 nights, 2 adult</div>
-                                                <div class="text-22 lh-12 fw-600 mt-5">US$72</div>
+                                                <div class="text-22 lh-12 fw-600 mt-5">3000₹ </div>
                                                 <div class="text-14 text-light-1 mt-5">+US$828 taxes and charges</div>
 
 
@@ -2500,7 +2500,7 @@
 
                                             <div class="">
                                                 <div class="text-14 text-light-1 mt-50 md:mt-20">8 nights, 2 adult</div>
-                                                <div class="text-22 lh-12 fw-600 mt-5">US$72</div>
+                                                <div class="text-22 lh-12 fw-600 mt-5">3000₹ </div>
                                                 <div class="text-14 text-light-1 mt-5">+US$828 taxes and charges</div>
 
 
@@ -3783,7 +3783,7 @@
                                     <div class="col-auto">
                                         <div class="d-flex items-center">
                                             <div class="text-14 text-light-1 mr-10">8 nights</div>
-                                            <div class="fw-500">US$72</div>
+                                            <div class="fw-500">3000₹ </div>
                                         </div>
                                     </div>
                                 </div>
@@ -3838,7 +3838,7 @@
                                     <div class="col-auto">
                                         <div class="d-flex items-center">
                                             <div class="text-14 text-light-1 mr-10">8 nights</div>
-                                            <div class="fw-500">US$72</div>
+                                            <div class="fw-500">3000₹ </div>
                                         </div>
                                     </div>
                                 </div>
@@ -3893,7 +3893,7 @@
                                     <div class="col-auto">
                                         <div class="d-flex items-center">
                                             <div class="text-14 text-light-1 mr-10">8 nights</div>
-                                            <div class="fw-500">US$72</div>
+                                            <div class="fw-500">3000₹ </div>
                                         </div>
                                     </div>
                                 </div>
@@ -3948,7 +3948,7 @@
                                     <div class="col-auto">
                                         <div class="d-flex items-center">
                                             <div class="text-14 text-light-1 mr-10">8 nights</div>
-                                            <div class="fw-500">US$72</div>
+                                            <div class="fw-500">3000₹ </div>
                                         </div>
                                     </div>
                                 </div>
@@ -4003,7 +4003,7 @@
                                     <div class="col-auto">
                                         <div class="d-flex items-center">
                                             <div class="text-14 text-light-1 mr-10">8 nights</div>
-                                            <div class="fw-500">US$72</div>
+                                            <div class="fw-500">3000₹ </div>
                                         </div>
                                     </div>
                                 </div>
@@ -4058,7 +4058,7 @@
                                     <div class="col-auto">
                                         <div class="d-flex items-center">
                                             <div class="text-14 text-light-1 mr-10">8 nights</div>
-                                            <div class="fw-500">US$72</div>
+                                            <div class="fw-500">3000₹ </div>
                                         </div>
                                     </div>
                                 </div>
@@ -4113,7 +4113,7 @@
                                     <div class="col-auto">
                                         <div class="d-flex items-center">
                                             <div class="text-14 text-light-1 mr-10">8 nights</div>
-                                            <div class="fw-500">US$72</div>
+                                            <div class="fw-500">3000₹ </div>
                                         </div>
                                     </div>
                                 </div>
