--- a/hotel-single.html
+++ b/hotel-single.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com/">
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600&amp;display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/vendors.css">
@@ -52,16 +53,16 @@
                                           <a href="/index.html">Home</a>
                                       </li>
                                       <li>
-                                          <a href="contact.html">Hotel</a>
+                                          <a href="hotel-list.html">Hotel</a>
                                       </li>
                                       <li>
-                                          <a href="contact.html">Tours</a>
+                                          <a href="/tour.html">Tours</a>
                                       </li>
                                       <li>
                                           <a href="contact.html">Flight</a>
                                       </li>
                                       <li>
-                                          <a href="contact.html">Blogs</a>
+                                          <a href="/blog-list.html">Blogs</a>
                                       </li>
                                       <li>
                                           <a href="contact.html">Plan</a>
@@ -2864,132 +2865,119 @@
       </div>
     </section>
 
-    <footer class="footer -type-1">
+    <footer class="footer-section">
       <div class="container">
-        <div class="pt-60 pb-60">
-          <div class="row y-gap-40 justify-between xl:justify-start">
-            <div class="col-xl-2 col-lg-4 col-sm-6">
-              <h5 class="text-16 fw-500 mb-30">Contact Us</h5>
-
-              <div class="mt-30">
-                <div class="text-14 mt-30">Toll Free Customer Care</div>
-                <a href="#" class="text-18 fw-500 text-blue-1 mt-5">+(1) 123 456 7890</a>
+          <div class="footer-cta pt-5 pb-5">
+              <div class="row">
+                  <div class="col-xl-4 col-md-4 mb-30">
+                      <div class="single-cta">
+                          <i class="fas fa-map-marker-alt"></i>
+                          <div class="cta-text">
+                              <h4>Find us</h4>
+                              <span> Victoria 8007,Australia.</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xl-4 col-md-4 mb-30">
+                      <div class="single-cta">
+                          <i class="fas fa-phone"></i>
+                          <div class="cta-text">
+                              <h4>Call us</h4>
+                              <span>9876543210 0</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xl-4 col-md-4 mb-30">
+                      <div class="single-cta">
+                          <i class="far fa-envelope-open"></i>
+                          <div class="cta-text">
+                              <h4>Mail us</h4>
+                              <span>mail@info.com</span>
+                          </div>
+                      </div>
+                  </div>
               </div>
-
-              <div class="mt-35">
-                <div class="text-14 mt-30">Need live support?</div>
-                <a href="#" class="text-18 fw-500 text-blue-1 mt-5">hi@gotrip.com</a>
-              </div>
-            </div>
-
-            <div class="col-xl-2 col-lg-4 col-sm-6">
-              <h5 class="text-16 fw-500 mb-30">Company</h5>
-              <div class="d-flex y-gap-10 flex-column">
-                <a href="#">About Us</a>
-                <a href="#">Careers</a>
-                <a href="#">Blog</a>
-                <a href="#">Press</a>
-                <a href="#">Gift Cards</a>
-                <a href="#">Magazine</a>
-              </div>
-            </div>
-
-            <div class="col-xl-2 col-lg-4 col-sm-6">
-              <h5 class="text-16 fw-500 mb-30">Support</h5>
-              <div class="d-flex y-gap-10 flex-column">
-                <a href="#">Contact</a>
-                <a href="#">Legal Notice</a>
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms and Conditions</a>
-                <a href="#">Sitemap</a>
-              </div>
-            </div>
-
-            <div class="col-xl-2 col-lg-4 col-sm-6">
-              <h5 class="text-16 fw-500 mb-30">Other Services</h5>
-              <div class="d-flex y-gap-10 flex-column">
-                <a href="#">Car hire</a>
-                <a href="#">Activity Finder</a>
-                <a href="#">Tour List</a>
-                <a href="#">Flight finder</a>
-                <a href="#">Cruise Ticket</a>
-                <a href="#">Holiday Rental</a>
-                <a href="#">Travel Agents</a>
-              </div>
-            </div>
-
-            <div class="col-xl-2 col-lg-4 col-sm-6">
-              <h5 class="text-16 fw-500 mb-30">Mobile</h5>
-
-              <div class="d-flex items-center px-20 py-10 rounded-4 border-light">
-                <div class="icon-apple text-24"></div>
-                <div class="ml-20">
-                  <div class="text-14 text-light-1">Download on the</div>
-                  <div class="text-15 lh-1 fw-500">Apple Store</div>
-                </div>
-              </div>
-
-              <div class="d-flex items-center px-20 py-10 rounded-4 border-light mt-20">
-                <div class="icon-play-market text-24"></div>
-                <div class="ml-20">
-                  <div class="text-14 text-light-1">Get in on</div>
-                  <div class="text-15 lh-1 fw-500">Google Play</div>
-                </div>
-              </div>
-            </div>
           </div>
-        </div>
-
-        <div class="py-20 border-top-light">
-          <div class="row justify-between items-center y-gap-10">
-            <div class="col-auto">
-              <div class="row x-gap-30 y-gap-10">
-                <div class="col-auto">
-                  <div class="d-flex items-center">
-                    © 2022 GoTrip LLC All rights reserved.
+          <div class="footer-content pt-5 pb-5">
+              <div class="row">
+                  <div class="col-xl-4 col-lg-4 mb-50">
+                      <div class="footer-widget">
+                          <div class="footer-logo">
+                              <a href="index.html"><img src="img/companylogo.png" class="img-fluid" alt="logo"></a>
+                          </div>
+                          <div class="footer-text">
+                              <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor incididuntut consec tetur adipisicing
+                              elit,Lorem ipsum dolor sit amet.</p>
+                          </div>
+                          <div class="footer-social-icon">
+                              <span>Follow us</span>
+                              <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                              <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
+                              <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                          </div>
+                      </div>
                   </div>
-                </div>
-
-                <div class="col-auto">
-                  <div class="d-flex x-gap-15">
-                    <a href="#">Privacy</a>
-                    <a href="#">Terms</a>
-                    <a href="#">Site Map</a>
+                  <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
+                      <div class="footer-widget">
+                          <div class="footer-widget-heading">
+                              <h3>Useful Links</h3>
+                          </div>
+                          <ul>
+                              <li><a href="#">Home</a></li>
+                              <li><a href="#">about</a></li>
+                              <li><a href="#">services</a></li>
+                              <li><a href="#">portfolio</a></li>
+                              <li><a href="#">Contact</a></li>
+                              <li><a href="#">About us</a></li>
+                              <li><a href="#">Our Services</a></li>
+                              <li><a href="#">Expert Team</a></li>
+                              <li><a href="#">Contact us</a></li>
+                              <li><a href="#">Latest News</a></li>
+                          </ul>
+                      </div>
                   </div>
-                </div>
+                  <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
+                      <div class="footer-widget">
+                          <div class="footer-widget-heading">
+                              <h3>Subscribe</h3>
+                          </div>
+                          <div class="footer-text mb-25">
+                              <p>Don’t miss to subscribe to our new feeds, kindly fill the form below.</p>
+                          </div>
+                          <div class="subscribe-form">
+                              <form action="#">
+                                  <input type="text" placeholder="Email Address">
+                                  <button><i class="fab fa-telegram-plane"></i></button>
+                              </form>
+                          </div>
+                      </div>
+                  </div>
               </div>
-            </div>
-
-            <div class="col-auto">
-              <div class="row y-gap-10 items-center">
-                <div class="col-auto">
-                  <div class="d-flex items-center">
-                    <button class="d-flex items-center text-14 fw-500 text-dark-1 mr-10">
-                      <i class="icon-globe text-16 mr-10"></i>
-                      <span class="underline">English (US)</span>
-                    </button>
-
-                    <button class="d-flex items-center text-14 fw-500 text-dark-1">
-                      <i class="icon-usd text-16 mr-10"></i>
-                      <span class="underline">USD</span>
-                    </button>
-                  </div>
-                </div>
-
-                <div class="col-auto">
-                  <div class="d-flex x-gap-20 items-center">
-                    <a href="#"><i class="icon-facebook text-14"></i></a>
-                    <a href="#"><i class="icon-twitter text-14"></i></a>
-                    <a href="#"><i class="icon-instagram text-14"></i></a>
-                    <a href="#"><i class="icon-linkedin text-14"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
-        </div>
       </div>
-    </footer>
+      <div class="copyright-area">
+          <div class="container">
+              <div class="row">
+                  <div class="col-xl-6 col-lg-6 text-center text-lg-left">
+                      <div class="copyright-text">
+                          <p>Copyright &copy; 2018, All Right Reserved <a href="#"></a></p>
+                      </div>
+                  </div>
+                  <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
+                      <div class="footer-menu">
+                          <ul>
+                              <li><a href="#">Home</a></li>
+                              <li><a href="#">Terms</a></li>
+                              <li><a href="#">Privacy</a></li>
+                              <li><a href="#">Policy</a></li>
+                              <li><a href="#">Contact</a></li>
+                          </ul>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </footer>
 
   </main>
 
