--- a/tour.html
+++ b/tour.html
@@ -1602,7 +1602,7 @@
               </div>
 
               <div>
-                <button class="button -md h-60 bg-blue-1 text-white">Subscribe</button>
+                <button class="button -md h-60 bg-blue-1 text-white">Subscribes</button>
               </div>
             </div>
           </div>
